--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icon": "^1.0.0",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "sass": "^1.34.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
